fix GameTest
(habia un test q no pasaba porq estaba mal escrito)